fix and Product page

--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,5 @@
     font-family: "Poppins", sans-serif;
 }
 .Space {
-    font-family: "Space Grotesk", sans-serif;
+    font-family: "Space", sans-serif;
 }
